--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -56,7 +56,7 @@
                             <input type="submit" class="submit tiny" value="Restaurar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
                         </form>
                         {% endif %}
-                        <form action="/backup/{{comp.id}}/add/" method="post" style="float: right">
+                        <form action="/backup/{{comp.id}}/add/" method="get" style="float: right">
                             <input type="submit" class="submit tiny" value="Criar backup" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
                         </form>
                     </div>
