Adicionando o radio button na arvore.

--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -38,7 +38,7 @@
         $(".tree_computer a").click(function()
         {
             get_tree_path = "/backup/get_tree/";
-            update_tree($(this).attr("path"), get_tree_path, ".tree_computer");
+            update_tree($(this).attr("path"), get_tree_path, ".tree_computer", "radio");
             return false;
         });
 
