--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -58,9 +58,9 @@
             </div>
             {% endif %}
             
-            {% if erros.procedure_name %}
+            {% if errors.procedure_name %}
             <ul class="errorlist">
-                <li>{{ erros.procedure_name }}</li>
+                <li>{{ errors.procedure_name }}</li>
             </ul>
             {% endif %}
             <p>
@@ -69,9 +69,9 @@
             </p>
             
             {% if not computer %}
-            {% if erros.computer_id %}
+            {% if errors.computer_id %}
             <ul class="errorlist">
-                <li>{{ erros.computer_id }}</li>
+                <li>{{ errors.computer_id }}</li>
             </ul>
             {% endif %}
             <p>
@@ -98,9 +98,9 @@
 	            });
 	        </script>
 	        
-            {% if erros.profile_id %}
+            {% if errors.profile_id %}
             <ul class="errorlist">
-                <li>{{ erros.profile_id }}</li>
+                <li>{{ errors.profile_id }}</li>
             </ul>
             {% endif %}
             <p>
@@ -109,15 +109,15 @@
                 <input type="radio" name="profile_id" value="{{profile.id}}" class="radio profile" id="profile_{{profile.id}}" {% if profile.id == profile_id %}checked="checked"{% endif %} />
                 <label for="profile_{{profile.id}}">{{profile.name}}</label>
                 {% endfor %}
-                <input type="radio" name="profile_id" value="new_profile" class="radio profile" id="profile_0" {% if profile.id == "new_profile" %}checked="checked"{% endif %} />
+                <input type="radio" name="profile_id" value="new_profile" class="radio profile" id="profile_0" {% if profile_id == "new_profile" %}checked="checked"{% endif %} />
                 <label for="profile_0">Criar um novo perfil</label><br/>
                 <small>Um perfil de configuração é um conjunto de armazenamento, agendamento e caminhos de diretórios que serão feitos backup.</small>
             </p>
             
             <div class="novo_perfil" style="display: none; padding: 20px; background: #FFF2A7; margin-bottom: 20px">
-                {% if erros.profile_name %}
+                {% if errors.profile_name %}
                 <ul class="errorlist">
-                    <li>{{ erros.profile_name }}</li>
+                    <li>{{ errors.profile_name }}</li>
                 </ul>
                 {% endif %}
                 <p>
@@ -125,9 +125,9 @@
                     <input type="text" class="text" name="profile.name" id="profile_name" value="{{profile_name}}" />
                 </p>
                 
-                {% if erros.profile_storage_id %}
+                {% if errors.profile_storage_id %}
                 <ul class="errorlist">
-                    <li>{{ erros.profile_storage_id }}</li>
+                    <li>{{ errors.profile_storage_id }}</li>
                 </ul>
                 {% endif %}
                 <p>
@@ -135,7 +135,7 @@
                     <select class="styled" id="storage_id" name="profile.storage_id">
                         <option value=""> - Selecione - </option>
                         {% for storage in storages %}
-                        <option value="{{storage.id}}" {% if storage.id == storage_id %}selected="selected"{% endif %}>{{storage.name}} - {{storage.address}}</option>
+                        <option value="{{storage.id}}" {% if storage.id == profile_storage_id %}selected="selected"{% endif %}>{{storage.name}} - {{storage.address}}</option>
                         {% endfor %}
                     </select>
                 </p>
@@ -153,9 +153,9 @@
     	            });
     	        </script>
                 
-                {% if erros.profile_schedule_id %}
+                {% if errors.profile_schedule_id %}
                 <ul class="errorlist">
-                    <li>{{ erros.profile_schedule_id }}</li>
+                    <li>{{ errors.profile_schedule_id }}</li>
                 </ul>
                 {% endif %}
                 <p>
@@ -163,9 +163,9 @@
                     <select class="styled" id="schedule_id" name="profile.schedule_id">
                         <option> - Selecione - </option>
                         {% for schedule in schedules %}
-                        <option value="{{schedule.id}}" {% if schedule.id == schedule_id %}selected="selected"{% endif %}>{{schedule.name}}</option>
+                        <option value="{{schedule.id}}" {% if schedule.id == profile_schedule_id %}selected="selected"{% endif %}>{{schedule.name}}</option>
                         {% endfor %}
-                        <option id="new_schedule">Criar novo agendamento</option>
+                        <option id="new_schedule" value="new_schedule" {% if profile_schedule_id == "new_schedule" %}selected="selected"{% endif %}>Criar novo agendamento</option>
                     </select>
                 </p>
         
@@ -199,11 +199,23 @@
 			
 			            
 			            <div style="float: right; padding: 10px 20px 10px 0; clear: both">
-			                {% if erros.schedule_name %}
+			                {% if errors.schedule_name %}
                             <ul class="errorlist" style="">
-                                <li>{{ erros.schedule_name }}</li>
+                                <li>{{ errors.schedule_name }}</li>
                             </ul>
                             {% endif %}
+                            {% if errors.schedule_day %}
+                            <ul class="errorlist" style="">
+                                <li>{{ errors.schedule_day }}</li>
+                            </ul>
+                            {% endif %}
+                            {% if errors.schedule_hour %}
+                            <ul class="errorlist" style="">
+                                <li>{{ errors.schedule_hour }}</li>
+                            </ul>
+                            {% endif %}
+
+
         			        <label>Nome do agendamento:</label> <input type="text" class="text small" name="schedule.name" value="{{schedule_name}}" />
         			    </div>
 			
@@ -248,7 +260,7 @@
 			        
             			<div class="sidebar_content" id="semanal">
             			    <p>
-                                <input type="checkbox" name="schedule.weekly.active" class="schedule_activate" id="weekly" value="1" {% if schedule_monthly_active %}checked="checked"{% endif %} /> <label for="weekly">Ativar</label>
+                                <input type="checkbox" name="schedule.weekly.active" class="schedule_activate" id="weekly" value="1" {% if schedule_weekly_active %}checked="checked"{% endif %} /> <label for="weekly">Ativar</label>
                             </p>
                             <div class="personal_message"><p>Executa o backup em determinados dias da semana, sempre no horário especificado.</p></div>
                             <p>
@@ -276,7 +288,7 @@
 			        
             			<div class="sidebar_content" id="diario">
             			    <p>
-                                <input type="checkbox" name="schedule.dayly.active" class="schedule_activate" id="dayly" value="1" {% if schedule_monthly_active %}checked="checked"{% endif %} /> <label for="dayly">Ativar</label><br/>
+                                <input type="checkbox" name="schedule.dayly.active" class="schedule_activate" id="dayly" value="1" {% if schedule_dayly_active %}checked="checked"{% endif %} /> <label for="dayly">Ativar</label><br/>
                             </p>
                             <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
                             <p>
@@ -297,7 +309,7 @@
                     
                         <div class="sidebar_content" id="minuto">
                             <p>
-                                <input type="checkbox" name="schedule.hourly.active" class="schedule_activate" id="hourly" value="1" {% if schedule_monthly_active %}checked="checked"{% endif %} /> <label for="hourly">Ativar</label>
+                                <input type="checkbox" name="schedule.hourly.active" class="schedule_activate" id="hourly" value="1" {% if schedule_hourly_active %}checked="checked"{% endif %} /> <label for="hourly">Ativar</label>
                             </p>
                             <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
                             <p>
@@ -338,9 +350,9 @@
     	            });
     	        </script>
 
-                {% if erros.profile_fileset_id %}
+                {% if errors.profile_fileset_id %}
                 <ul class="errorlist">
-                    <li>{{ erros.profile_fileset_id }}</li>
+                    <li>{{ errors.profile_fileset_id }}</li>
                 </ul>
                 {% endif %}
                 <p>
@@ -348,7 +360,7 @@
                     <select class="styled" id="fileset_id" name="profile.fileset_id">
                         <option> - Selecione - </option>
                         {% for fileset in filesets %}
-                        <option value="{{fileset.id}}" {% if profile_fileset_id == fileset %}selected="selected"{% endif %}>{{fileset.name}}</option>
+                        <option value="{{fileset.id}}" {% if profile_fileset_id == fileset.id %}selected="selected"{% endif %}>{{fileset.name}}</option>
                         {% endfor %}
                         <option id="new_fileset" value="new_fileset" {% if profile_fileset_id == "new_fileset" %}selected="selected"{% endif %}>Criar novo conjunto de arquivo</option>
                     </select>
@@ -400,8 +412,24 @@
             		</div>		<!-- .block_head ends -->
             		<div class="block_content">
                         <p>
+                            {% if errors.fileset_name %}
+                            <ul class="errorlist" style="">
+                                <li>{{ errors.fileset_name }}</li>
+                            </ul>
+                            {% endif %}
+
                             <label for="fileset_name">Nome do conjunto de arquivos:</label><br/>
                             <input type="text" name="fileset_name" id="fileset_name" class="text mid" value="{{fileset_name}}" />
+
+
+                        </p>
+
+                        <p>
+                            {% if errors.path %}
+                            <ul class="errorlist" style="">
+                                <li>{{ errors.path }}</li>
+                            </ul>
+                            {% endif %}
                         </p>
 
                         {% if path %}
