--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -37,7 +37,7 @@
 
         $(".tree_computer a").click(function()
         {
-            get_tree_path = "/backup/get_tree/";
+            get_tree_path = "/restore/get_client_tree/";
             update_tree($(this).attr("path"), get_tree_path, ".tree_computer", "radio");
             return false;
         });
