Link para adicionar novo profile na listagem de profile.

--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -10,7 +10,7 @@
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
-        <p></p>
+        <p><a href="{% url nimbus.procedures.views.profile_add %}">Adicionar perfil de configuração</a></p>
         <div class="profiles">
         {% for profile in profiles %}
             <div class="profile" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
