--- a/nimbus/storages/templates/storages_view.html
+++ b/nimbus/storages/templates/storages_view.html
@@ -32,7 +32,7 @@
                         <small class="ip">{{storage.address}}</small>
                     </div>
                     <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{storage.description}}</p>
-                    <p style="font-size: 10px; margin: 0; padding: 0; line-height: 1.4em"><a href="/storages/{{storage.id}}/edit/">Editar</a> - <a href="/storages/{{storage.id}}/delete/">Remover</a></p>
+                    <p style="font-size: 10px; margin: 0; padding: 0; line-height: 1.4em"><a href="/storages/{{storage.id}}/edit/">Editar</a></p>
                     
                 </div>
                 <div class="right" style="float: right; width: 600px">
