--- a/nimbus/storages/templates/storages_list.html
+++ b/nimbus/storages/templates/storages_list.html
@@ -42,7 +42,7 @@
                         <small class="ip">{{storage.address}}</small>
                     </div>
                     <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{storage.description}}</p>
-                    <p style="font-size: 10px; margin: 0; padding: 0; line-height: 1.4em"><a href="/storages/{{storage.id}}/edit/">Editar</a> - <a href="/storages/{{storage.id}}/delete/">Remover</a></p>
+                    <p style="font-size: 10px; margin: 0; padding: 0; line-height: 1.4em"><a href="/storages/{{storage.id}}/edit/">Editar</a></p>
                     
                 </div>
                 <div class="right" style="float: right; width: 600px">
@@ -61,13 +61,35 @@
                         <h4>COMPUTADORES RELACIONADOS</h4>
                         
                         <div style="background: #FFF; border: 1px solid #DDD; -moz-border-radius: 5px; padding: 10px">
+                        {% for computer in storage.get_computers %}
+                            <div class="computers">
+                                <div class="title">
+                                    <a href="#" class="toggle" ref="computer_detail">
+                                        <img src="/media/icons/computer.png" style="float: left; padding-right: 10px" />
+                                        <h4 style="display: inline">{{computer.name}}</h4>
+                                    </a>
+                                </div>
+                                <div class="computer_detail" style="display: none">
+                                    {% for proc in computer.procedure_set.all %}
+                                        <h4 class="name">{{proc.name}} <small><a href="{% url nimbus.procedures.views.edit object_id=proc.id %}">(editar)</a></small></h4>
+                                        Offsite ativado: {% if proc.offsite_on %}Sim{% else %}Não{% endif %}<br/>
+                                        Perfil de configuração: <a href="{% url nimbus.procedures.views.profile_edit object_id=proc.profile.id %}">{{proc.profile.name}}</a><br/>
+                                        Agendamento: <a href="{% url nimbus.schedules.views.edit object_id=proc.profile.schedule.id %}">{{proc.profile.schedule}}</a><br/>
+                                        Conjunto de arquivos: <a href="{% url nimbus.filesets.views.edit object_id=proc.profile.fileset.id %}">{{proc.profile.fileset}}</a>
+                                        <p></p>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                        {% if 0 %}
                         {% for profile in storage.profile_set.all %}
                             {% for proc in profile.procedure_set.all %}
                             <div class="computers">
                                 <div class="title">
                                     <a href="#" class="toggle" ref="computer_detail">
-                                    <img src="/media/icons/computer.png" style="float: left; padding-right: 10px" />
-                                    <h4>{{proc.computer.name}}</h4>
+                                        <img src="/media/icons/computer.png" style="float: left; padding-right: 10px" />
+                                        <h4 style="display: inline">{{proc.computer.name}} - </h4>
+                                        <h4 style="display: inline">{{proc.name}}</h4>
                                     </a>
                                 </div>
                                 <div class="computer_detail" style="display: none">
@@ -90,6 +112,7 @@
                             </div>
                             {% endfor %}
                         {% endfor %}
+                        {% endif %}
                         </div>
                     {% endif %}
                 </div>
